# streamlit-sorteio

./: pyproject.toml
app/: Hello.py  side_bar.py
app/pages/: 3_📊_DataFrame_Demo.py
