[tool.poetry]
name = "streamlit-sorteio"
version = "0.1.0"
description = ""
authors = ["Luciano Filho <lvgalvaofilho@gmail.com>"]
readme = "README.md"
packages = [{ include = "streamlit_sorteio" }]

[tool.poetry.dependencies]
python = "3.11.5"
streamlit = "^1.28.2"
taskipy = "^1.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]

run = "streamlit run app/main.py"
